--- a/.tekton/ansible-chatbot-push.yaml
+++ b/.tekton/ansible-chatbot-push.yaml
@@ -96,7 +96,7 @@ spec:
       description: Add built image into an OCI image index
       name: build-image-index
       type: string
-    - default: []
+    - default: ["RAG_CONTENTS_SUB_FOLDER=vector_db/aap_product_docs", "LIGHTSPEED_RAG_CONTENT_IMAGE=quay.io/ttakamiy/aap-rag-content:latest"]
       description: Array of --build-arg values ("arg=value" strings) for buildah
       name: build-args
       type: array
